test/expected/explain_ub.out
explain unsigned bool x
        ^
9: error: "unsigned bool" is illegal for built-in type
